--- a/c4.md
+++ b/c4.md
@@ -1,6 +1,8 @@
 # Documentation
 ## C4
 ```mermaid
+C4Context
+    title System Context diagram for Internet Banking System
 sequenceDiagram
     participant dotcom
     participant iframe
